Refactoring of plugins exec

--- a/test/gifts.yml
+++ b/test/gifts.yml
@@ -22,6 +22,8 @@ members:
    - type: test_mail
      meta:
       email: "bmcroe@mail.com"
+   exclude:
+   - "John Williams"
  - name: "Diane Smith"
    plugins:
    - type: test_mail
